base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swampup23-backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: swampup-backend
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            port: 8080
            path: /
        readinessProbe:
          httpGet:
            port: 8080
            path: /
