base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: swampup23-svc
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
